# LASSI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt  cluster.c  cluster.h  compile.sh  debugged_list.txt  energy.c  energy.h  global.h  initialize.c  initialize.h  main.c  mcmove.c  mcmove.h  parsekey.c  parsekey.h  print.c  print.h  structure.c  structure.h
examples/: README.md
examples/A_SingleMolecule/: README.md  Visualize_SM.vmd  energy_SM.prm  param_SM.key  structure_SM.prm
examples/B_DiBlockSystem/: README.md  Visualize_DB.vmd  param_DB.key  structure_DB.prm
examples/C_SeparatedSystem/: README.md  Visualize_S.vmd  param_S.key  structure_S.prm
examples/D_BranchedSystem/: README.md  Visualize_BR.vmd  energy_BR.prm  param_BR.key  structure_BR.prm
new_example/: README.md  param.key  structure.prm
python/Example/: Example_BinodalGen.ipynb  GenerateBinodal_Example.ipynb  energyNO.prm  param.key  paramFast.key
python/LASSI-Helper/: LASSI.py  LASSI_2.py
runs/MYTEST/: energy-1.prm  energy.prm  energy_lin.prm  param-1.key  param.key  structure.prm
runs/Test_Simulation/: TestRun_1_trj.lammpstrj  TestRun_2_trj.lammpstrj  TestRun_3_trj.lammpstrj  TestRun_4_trj.lammpstrj  TestRun_topo.lammpstrj  Visualize.vmd  energy.prm  energyNO.prm  lassi  param.key  structure.prm
src/: cluster.c  cluster.h  compile.sh  energy.c  energy.h  global.h  initialize.c  initialize.h  lassi  lassi_gdb  main.c  mcmove.c  mcmove.h  parsekey.c  parsekey.h  print.c  print.h  structure.c  structure.h
src/output/: energy.prm
